--- a/azure.pipelines.yml
+++ b/azure.pipelines.yml
@@ -54,7 +54,7 @@ steps:
     command: 'test'
     arguments: '--configuration $(buildConfiguration) --no-build'
     publishTestResults: true
-    projects: '**/*.Test.csproj'
+    projects: '**/*.Tests.csproj'
 
 - task: DotNetCoreCLI@2
   displayName: 'Publish the project - Release'
